@@ -15,6 +15,9 @@ $ Renamed Master.invokeEvent() to Master.triggerEvent()
 + Added Master.triggerSingleEvent()
 + Added Master.triggerSingleEventArray()
 + Added Master.syncChannelLists()
++ Added a parser for colours and formatting
++ Added Channel class
++ Added Master.getChannelTopic()
 
 
 Version 1.1.0 (15/05/2010)
